--- a/source/tsconfig.json
+++ b/source/tsconfig.json
@@ -7,6 +7,6 @@
         "sourceMap": true,
         "jsx": "react",
 
-        "outDir": "../node_modules/@ff/core",
+        "outDir": "../node_modules/@ff/core"
     }
 }
