--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,8 @@
         "composite": true,
         "target": "ES6",
         "module": "commonjs",
-        "declaration": true,
-        "sourceMap": true,
         "experimentalDecorators": true,
 
-        "outDir": "../node_modules/@ff/core"
+        "sourceMap": true
     }
 }
