--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
     "compilerOptions": {
-        "composite": true,
+        "noEmit": true,
         "target": "ES6",
         "module": "commonjs",
         "experimentalDecorators": true,
-
         "sourceMap": true
     }
 }
