--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/mocha": "^7.0.2",
         "chai": "^4.2.0",
         "mocha": "^7.1.2",
+        "module-alias": "^2.2.2",
         "typescript": "^3.8.3"
     }
 }
