--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "experimentalDecorators": true,
         "sourceMap": true,
 
-        "outDir": "exports",
+        "outDir": "built/export",
         "rootDir": "source"
     },
     "include": [
