--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
         "target": "ES6",
         "module": "CommonJS",
         "experimentalDecorators": true,
+        "allowSyntheticDefaultImports": true,
         "sourceMap": true,
 
-        "outDir": "built/export",
-        "rootDir": "source"
+        "outDir": "dist/exports",
+        "rootDir": "src"
     },
     "include": [
-        "source/**/*"
+        "src/**/*"
     ]
 }
