updated package export

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     ],
     "type": "commonjs",
     "exports": {
-        "./": "./dist/exports/"
+        "./cjs/": "./dist/exports/",
+        "./": "./src/"
     },
     "scripts": {
         "build": "tsc",
