--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@framefactory/core",
     "version": "2.1.0",
+    "license": "MIT",
     "description": "FF Core Typescript Foundation Library",
     "keywords": [
         "typescript",
@@ -9,38 +10,47 @@
         "graphics",
         "animation"
     ],
-    "type": "commonjs",
-    "exports": {
-        "./cjs/": "./dist/exports/",
-        "./": "./src/"
-    },
-    "scripts": {
-        "build": "tsc",
-        "clean": "(rimraf dist && mkdirp dist) || exit 1",
-        "test": "tsc -b test; mocha -c --ui tdd dist/test/test.js || exit 0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/framefactory/ff-core.git"
-    },
+    "homepage": "https://github.com/framefactory/ff-core#readme",
     "author": {
         "name": "Ralph Wiedemeier",
         "email": "opensource@framefactory.ch",
         "url": "https://github.com/framefactory"
     },
-    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/framefactory/ff-core.git"
+    },
     "bugs": {
         "url": "https://github.com/framefactory/ff-core/issues"
     },
-    "homepage": "https://github.com/framefactory/ff-core#readme",
+    "type": "module",
+    "files": [
+        "build/js/**/*",
+        "build/types/**/*",
+        "src/**/*"
+    ],
+    "exports": {
+        "./*.js": {
+            "default": {
+                "types": "./build/types/*.d.ts",
+                "default": "./build/js/*.js"
+            }
+        },
+        "./*": "./src/*"
+    },
+    "imports": {
+        "#lib/*": "./build/js/*.js"
+    },
+    "scripts": {
+        "build": "npm run clean && tsc",
+        "clean": "rm -rf ./build",
+        "test": "tsc -b test; mocha -c --ui tdd build/test/test.js || exit 0"
+    },
     "devDependencies": {
         "@types/chai": "^4.3.3",
         "@types/mocha": "^9.1.1",
         "chai": "^4.3.6",
-        "mkdirp": "^1.0.4",
         "mocha": "^10.0.0",
-        "module-alias": "^2.2.2",
-        "rimraf": "^3.0.2",
-        "typescript": "^4.8.3"
+        "module-alias": "^2.2.2"
     }
 }
