--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # FOLDERS
 .idea/
 .vscode/
+.cache/
+.pnpm-store/
 node_modules/
 
 build/
@@ -11,3 +13,4 @@ doc/
 .DS_Store
 *.log
 *.tsbuildinfo
+*.tgz
