--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@framefactory/core",
+    "name": "@ffweb/core",
     "version": "2.2.0",
     "license": "MIT",
     "description": "FF Core Typescript Foundation Library",
@@ -24,32 +24,33 @@
     "bugs": {
         "url": "https://github.com/framefactory/ff-core/issues"
     },
+    "type": "module",
+    "packageManager": "pnpm@7.12.1",
     "files": [
+        "build/types/**/*",
         "build/esm/**/*",
         "build/cjs/**/*",
         "src/**/*"
     ],
     "exports": {
         "./*": {
-            "types": "./build/types/*.d.ts",
-            "import": "./build/esm/*.js",
-            "require": "./build/cjs/*.js"
+            "types": "./build/types/*",
+            "import": "./build/esm/*",
+            "require": "./build/cjs/*"
         }
     },
-    "imports": {
-        "#lib/*": "./build/cjs/*.js"
-    },
     "scripts": {
-        "build": "npm run clean && npm run build:esm && npm run build:cjs",
-        "build:esm": "tsc -p tsconfig.esm.json",
-        "build:cjs": "tsc -p tsconfig.json",
+        "build": "pnpm build:cjs && pnpm build:esm",
+        "build:esm": "tsc -b tsconfig.json",
+        "build:cjs": "tsc -b tsconfig.cjs.json",
         "clean": "rm -rf ./build",
-        "test": "rm -rf ./build/test && tsc -b test && mocha -c --ui tdd build/test/test.js"
+        "test": "rm -rf ./build/test && tsc -b test && mocha -c --ui tdd build/test/index.js"
     },
     "devDependencies": {
         "@types/chai": "^4.3.3",
         "@types/mocha": "^9.1.1",
         "chai": "^4.3.6",
-        "mocha": "^10.0.0"
+        "mocha": "^10.0.0",
+        "typescript": "^4.8.3"
     }
 }
