--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,6 +5,7 @@
         "checkJs": true,
         "allowJs": true,
         "allowSyntheticDefaultImports": true,
+        "useDefineForClassFields": false,
         "experimentalDecorators": true
     }
 }
