update typescript config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
     "extends": "./tsconfig.base.json",
 
     "compilerOptions": {
-        "target": "ES2022",
-        "module": "ESNext",
+        "target": "ES2021",
+        "module": "NodeNext",
         "moduleResolution": "NodeNext",
 
         "composite": true,
