--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -2,9 +2,9 @@
     "extends": "./tsconfig.base.json",
 
     "compilerOptions": {
-        "target": "ES2022",
+        "target": "ES2021",
         "module": "CommonJS",
-        "moduleResolution": "NodeNext",
+        "moduleResolution": "Node",
 
         "composite": true,
         "declaration": true,
